pyarmor.bug.log
[BUG]: no binding for nonlocal 'contador_personas' found (<frozen escaner_videos>, line 349)

## Command Line
/usr/local/bin/pyarmor gen -O compilado buscador_objetivo.py debug_test.py definir_objetivo.py escaner_encodings.py escaner_videos.py filtrar_sobrantes.py filtrar_todas_sobrantes.py seguridad.py

## Environments
Python 3.11.15
Pyarmor 9.2.4 (trial), 000000, non-profits
Platform linux.x86_64
Native linux.x86_64
Home /root/.pyarmor

## Traceback
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 804, in main
    main_entry(sys.argv[1:])
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 789, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 248, in cmd_gen
    builder.process(options)
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 190, in process
    async_obfuscate_scripts(self, n) if n else self._obfuscate_scripts()
                                               ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 145, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/core/__init__.py", line 95, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 728, in generate_obfuscated_script
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 544, in process
  File "<maker>", line 544, in <listcomp>
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 1195, in process
  File "/usr/local/lib/python3.11/site-packages/pyarmor/cli/resource.py", line 170, in recompile
    self.mco = compile(mtree, self.frozenname, 'exec', optimize=optimize)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen escaner_videos>", line 349
SyntaxError: no binding for nonlocal 'contador_personas' found


